objects/CHANNEL_ORDERS__Partner_Contract_Terms__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Auto_Renew_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Auto Renew Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Cancellation_Terms_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Cancellation Terms Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Contract_Length_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Contract Length Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_Renewal_Length_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Renewal Length Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Allow_to_Sell_to_Existing_Org__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow to Sell to Existing Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__COA_Sync_timestamp__c</fullName>
        <label>COA Sync timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Auto_Renew_Policy__c</fullName>
        <label>Default Auto Renew Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Never Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Partner Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Billing_Frequency__c</fullName>
        <label>Default Billing Frequency (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Cancellation_Terms__c</fullName>
        <label>Default Cancellation Terms (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Contract_Auto_Renew__c</fullName>
        <label>Default Contract Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Contract_Currency__c</fullName>
        <label>Default Contract Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Contract_Length_Months__c</fullName>
        <label>Default Contract Length (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Contract_Length__c</fullName>
        <label>Default Contract Length (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Renewal_Length__c</fullName>
        <label>Default Renewal Length (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Override_Level__c</fullName>
        <label>Override Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_API_Key__c</fullName>
        <label>Partner API Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Contract_Term_External_ID__c</fullName>
        <description>used for data loading partner products</description>
        <externalId>true</externalId>
        <label>Partner Contract Term External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired (Add-ons Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISVforce</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Contract Terms</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Partner_Contract_Term_External_ID__c</columns>
        <columns>CHANNEL_ORDERS__Allow_Auto_Renew_Override__c</columns>
        <columns>CHANNEL_ORDERS__Allow_Contract_Length_Override__c</columns>
        <columns>CHANNEL_ORDERS__Allow_to_Sell_to_Existing_Org__c</columns>
        <columns>CHANNEL_ORDERS__Default_Auto_Renew_Policy__c</columns>
        <columns>CHANNEL_ORDERS__Default_Contract_Currency__c</columns>
        <columns>CHANNEL_ORDERS__Default_Contract_Length_Months__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contract Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>